# opsintools

./: .gitignore  README.md  env.yaml  pyproject.toml
colab/: colab_utils.py  opsinmap3d.ipynb  opsinmaphmm.ipynb  opsinpdb.ipynb
src/opsintools/: __init__.py  align.py  data.py  globals.py  main.py  map.py  msa_methods.py
src/opsintools/classes/: Hmmer.py  PyMol.py  Tcoffee.py  TrimmedChain.py  USalign.py
src/opsintools/resources/: atom_map.py
src/opsintools/scripts/: aln_mapping.py  best.py  hmmer.py  pdb.py  prot_trim_filter.py  score_alignments.py  t_coffee.py  tm_pos.py  us_align.py  utils.py
