[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "opsintools"
version = "0.1.0"
authors = [
  { name = "Valentin Umperovich", email = "valentinump@gmail.com" },
  { name = "Andrey Rozenberg", email = "alephreish@gmail.com" }
]
description = "Rhodopsin tools"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3",
    "Operating System :: OS Independent",
]
dependencies = [
    "pyfaidx>=0.8",
    "biopython>=1.78"
]

[project.urls]
"Homepage" = "https://github.com/BejaLab/opsintools"
"Bug Tracker" = "https://github.com/BejaLab/opsintools/issues"

[project.scripts]
opsinmap3d = "opsintools:opsinmap3d_cli"
