[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "opsintools"
version = "0.2.0"
authors = [
  { name = "Valentin Umperovich", email = "valentinump@gmail.com" },
  { name = "Andrey Rozenberg", email = "alephreish@gmail.com" }
]
description = "Rhodopsin tools"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3",
    "Operating System :: OS Independent",
]
dependencies = [
    "biopython>=1.86"
]

[project.urls]
"Homepage" = "https://github.com/BejaLab/opsintools"
"Bug Tracker" = "https://github.com/BejaLab/opsintools/issues"

[project.scripts]
opsindata = "opsintools:opsindata_cli"
opsinmap3d = "opsintools:opsinmap3d_cli"
opsinalign3d = "opsintools:opsinalign3d_cli"
opsinpdb = "opsintools:opsinpdb_cli"
opsinmaphmm = "opsintools:opsinmaphmm_cli"
mustang_msa = "opsintools:mustang_msa_cli"
mtm_align_msa = "opsintools:mtm_align_msa_cli"
